[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Dylan Starink <dylan@starink.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
validator = "0.16.1"
joinery = "3.1.0"
chrono = "0.4.31"
log = "0.4.20"
serde = "1.0.193"
anyhow = "1.0.75"
itertools = "0.12.0"
regex = "1.10.2"
once_cell = "1.18.0"